--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -66,6 +66,11 @@ footer p {
     width: 95%;
   }
   
+  h1 {
+    font-size: 1.25em;
+    margin-left: 1.75em;
+  }
+  
   form label {
     margin: 1em 0 1em 2em;
     width: 80%;
@@ -74,7 +79,7 @@ footer p {
   form input {
     height: 2em;
     margin: 1em 0 1em 2em;
-    width: 80%;
+    width: 12em;
   }
   
   form #submit {
