--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -30,6 +30,10 @@ footer p {
   margin: 1em 1em 1em 2em;
 }
 
+.error{
+  margin: 1em 0 1em 2em;
+}
+
 /* Screens bigger than 400px */
 
 @media screen and (min-width: 401px) {
@@ -47,7 +51,7 @@ footer p {
   }
   
   .right {
-    height: 3em;
+    margin: 0 0 0 2em;
   }
   
   #submit {
@@ -70,6 +74,14 @@ footer p {
     margin-left: 1.75em;
   }
   
+  .line{
+      white-space: nowrap;
+  }
+  
+  .line > div{
+      display:inline;
+  }
+  
   .left {
     margin: 1em 0 1em 2em;
     width: 80%;
@@ -77,7 +89,7 @@ footer p {
   
   .right {
     height: 2em;
-    margin: 1em 0 1em 2em;
+    margin: 0 0 0 2em;
     width: 12em;
   }
   
