--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,7 +1,4 @@
-/* 
-    Created on : Oct 24, 2016, 7:35:42 PM
-    Author     : Casey Hayes
-*/
+/*©2016 Casey Hayes & Tanner McIntyre. All Rights Reserved.*/
 
 * {
   font-family: 'Ubuntu', sans-serif;
